tests/fixtures/invalid/var_meta_undefined.wks
# Test undefined variable in meta-variable name
:var "%(undefined)" "value"
x "Test" +write %{{echo test}}
